upload ćwiczeń 3,4,5 + poprawki

--- a/XHTML/index.html
+++ b/XHTML/index.html
@@ -7,29 +7,54 @@
 		<meta http-equiv="Content-Type" content="application/xhtml+xml;charset=UTF-8" />
 	</head>
 	<body>
-		<h1>Tytuł rozdziału I</h1>
+		<div>
+			Nawigacja:
+			<ol>
+				<li><a href="./sub_page_1.html">Ćwiczenie 2</a></li>
+				<li><a href="./sub_page_2.html">Ćwiczenie 3</a></li>
+				<li><a href="./sub_page_3.html">Ćwiczenie 4</a></li>
+			</ol>
+		</div>
+		
+		<div>
+			Spis treści:
+			<ol>
+				<li><a href="#t1">Rozdział I</a></li>
+				<li><a href="#s1t1">Podrozdział I rozdziału I</a></li>
+				<li><a href="#ss1s1t1">Tytuł podpodrozdziału I podrozdziału I rozdziału I</a> </li>
+				<li><a href="#s2t1">Podrozdział II rozdziału I</a></li>
+				<li><a href="#t2">Rozdział II</a></li>
+				<li><a href="#s1t2">Podrozdział I rozdziału II</a></li>
+			</ol>
+		</div>
+	
+		<h1 id="t1">Tytuł rozdziału I</h1>
 		<p>Vestibulum dictum, justo sed pretium egestas, lectus felis vestibulum nisi, ac vulputate arcu erat vitae tortor. Suspendisse eleifend sit amet dolor suscipit lacinia. Fusce posuere risus quis tortor blandit pellentesque. Nam auctor dolor vel sapien fringilla tempus vitae vel augue. Proin ex quam, blandit eu dolor ac, auctor faucibus sem. Sed vel mi eros. Vivamus metus arcu, placerat in eros ac, efficitur venenatis massa. Integer enim arcu, maximus sit amet lectus sed, molestie semper leo. 
 		</p>
 		
 		<p>Quisque convallis molestie eros sed hendrerit. Aliquam in accumsan lorem. Mauris maximus justo ipsum, at consequat augue placerat eu. Vestibulum tellus arcu, sagittis non sem nec, pharetra condimentum augue. Fusce ultricies, dolor ac pretium porta, elit sapien pretium diam, ac fringilla ante diam ultrices odio. Sed eu metus sit amet neque placerat mollis. Vivamus sodales tortor justo, ut suscipit lectus bibendum id. Praesent nibh leo, sollicitudin nec ante eu, efficitur accumsan nunc. Vivamus efficitur eu mi ultrices varius.
 		</p>
 		
-		<h2>Tytuł podrozdziału I rozdziału I</h2>
+		<h2 id="s1t1">Tytuł podrozdziału I rozdziału I</h2>
 		<p>Duis at molestie libero. Nunc in nisl sapien. Praesent vestibulum tristique rhoncus. Pellentesque porta enim sit amet neque tempor hendrerit. Curabitur eget congue justo. Vivamus finibus libero vitae nisl molestie, vel consequat nulla commodo. In et ligula dapibus, rutrum nunc eu, vehicula neque. Donec efficitur tincidunt turpis ut dignissim. Integer eu maximus odio, a suscipit nibh. Ut ante nibh, egestas in tortor non, luctus rhoncus nulla. Donec arcu purus, placerat id felis eget, tristique volutpat ipsum. Mauris semper sapien in nibh vulputate, nec vestibulum sem consectetur. Integer ipsum dui, molestie vitae pellentesque quis, congue at massa. Nullam id enim eget dui dictum maximus. 
 		</p>
 		
-		<h3>Tytuł podrozdziału II rozdziału I</h3>
+		<h3 id="ss1s1t1">Tytuł podpodrozdziału I podrozdziału I rozdziału I </h3>
+		<p>Quisque interdum risus id hendrerit condimentum. Mauris eu nisi purus. Cras venenatis eleifend justo, vel rutrum odio accumsan ac. Pellentesque maximus porta ipsum, eu pharetra felis suscipit eget. Fusce id tempor dolor. Nam sit amet orci in urna fringilla molestie vehicula non tellus. Morbi interdum egestas facilisis. Aliquam ac ligula ac metus commodo auctor. Fusce nisi diam, eleifend eu odio id, tincidunt eleifend lacus. Fusce mollis velit dui, et euismod leo malesuada in. 
+		</p>
+		
+		<h2 id="s2t1">Tytuł podrozdziału II rozdziału I</h2>
 		<p>Etiam lectus magna, accumsan ut congue a, dapibus a ante. Pellentesque eleifend ex vitae tristique sodales. Morbi nec eleifend neque, vitae fringilla purus. Nullam fringilla ipsum vitae lorem finibus tempus. Praesent sapien diam, imperdiet eu ullamcorper ut, tincidunt id velit. Nam eleifend et ligula eu vehicula. Nam aliquam ipsum et enim maximus, lacinia pellentesque augue condimentum. Fusce placerat fringilla ante a tempor. Proin vel massa vitae felis suscipit volutpat nec ac tortor. 
 		</p>
 		
 		<p>Quisque mollis convallis augue, a ultrices quam pellentesque at. Aliquam ac magna et velit egestas fringilla a et orci. Suspendisse nec ornare elit. Curabitur semper venenatis pretium. Nunc lacus diam, vestibulum nec nunc vitae, placerat scelerisque velit. Curabitur vulputate dignissim risus vel faucibus. Suspendisse quis nibh velit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer eu nulla ac arcu tincidunt hendrerit ut sed nulla. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin tellus odio, luctus id libero ut, egestas malesuada eros. Nulla fringilla venenatis dui. Nunc convallis id ex nec venenatis. Curabitur tristique finibus maximus. Aenean lacus leo, pharetra sed mollis vitae, maximus vestibulum nisi.
 		</p>
 		
-		<h1>Tytuł rozdziału II</h1>
+		<h1 id="t2">Tytuł rozdziału II</h1>
 		<p>Duis sodales tempor urna nec sagittis. Cras vestibulum risus eget lacus rutrum dignissim. Donec ut arcu eu purus hendrerit commodo. Curabitur et dictum enim, sed sagittis leo. Integer vulputate sem quis sem rutrum elementum. Etiam urna augue, ornare sed dapibus non, molestie id libero. Nulla fringilla posuere mauris eu convallis. Maecenas blandit sed urna quis tempor. Mauris ut porttitor ex, nec consequat lacus. Phasellus accumsan erat volutpat nibh tempus, vitae laoreet ante ullamcorper. Fusce tristique facilisis leo, in dictum elit pellentesque at. Mauris eget congue enim, et gravida ligula. Cras mattis est sed ipsum aliquam finibus. Mauris in nisl justo.
 		</p>
 		
-		<h2>Tytuł podrozdziału I rozdziału II</h2>
+		<h2 id="s1t2">Tytuł podrozdziału I rozdziału II</h2>
 		<p>Pierwsze zabiegi o zgodę na powołanie w Krakowie wyższej uczelni kształcącej inżynierów górnictwa rozpoczęły się w 1912 roku z udziałem grupy inżynierów i działaczy górniczych, pod przewodnictwem Jana Zarańskiego. W 1913 roku Ministerstwo Robót Publicznych w Wiedniu powołało Komitet Organizacyjny Akademii Górniczej, którego przewodniczącym został profesor Józef Morozewicz. Ostatecznie Akademia Górnicza w Krakowie została zatwierdzona przez Najwyższe Postanowienie cesarza Franciszka Józefa z dnia 31 maja 1913. W tym samym roku mianowano pierwszego profesora Akademii – został nim Zarański. Inaugurację zaplanowano na rok akademicki 1914/15, był już gotowy rozkład wykładów na semestr zimowy. Wybuch I wojny światowej uniemożliwił jednak rozpoczęcie działalności Akademii.
 		</p>
 		
