--- a/XHTML/sub_page_1.html
+++ b/XHTML/sub_page_1.html
@@ -7,8 +7,25 @@
 		<meta http-equiv="Content-Type" content="application/xhtml+xml;charset=UTF-8" />
 	</head>
 	<body>
-		<h1>Nagłówek</h1>
-		<p><i>Pomysł na sprowadzenie lokomotywy na teren AGHnarodził się na początku roku akademickiego 2007/08.</i> <b>Jego autorem był Łukasz Wzorek, wówczas student Wydziału Metali Nieżelaznych AGH.</b> <em>Wraz z Maciejem Królem z Politechniki Krakowskiej przedstawił ideę na zebraniu międzyuczelnianego Studenckiego Koła Naukowego Przedsiębiorców „Firma”.</em> <strong>Uzyskali akceptację projektu. Najpierw zwrócili uwagę na przeznaczony na złom zabytkowy parowóz z XIX wieku w Krzeszowicach.</strong> Następnie, po wizycie w Tarnowskich Górach, postanowili spróbować sprowadzić do Krakowa lokomotywę typu Ty2. Dzięki współpracy z przedstawicielami fundacji „Era Parowozów” oraz właścicielami skansenu kolejowego w Pyskowicach, uzyskali listę lokomotyw przeznaczonych do złomowania. Udali się na Pomorze i po oględzinach wybrali Ty2-559 stojący w Chojnicach. Po powrocie do Krakowa zyskali akceptację dla pomysłu od rektora AGH, prof. Antoniego Tajdusia. Dzięki poparciu oraz pomocy fundacji „Era Parowozów” udało się przekonać PKP Cargo do odstąpienia od pozbycia się parowozów. Kartą przetargową okazała się luka prawna w postaci braku wyceny historycznej eksponatów. Po pół roku wynegocjowano warunki przekazania parowozu: lokomotywę otrzymano za darmo, do tego PKP dołożyło tender oraz wagon z lat 50. Ponadto kolej zrezygnowała z pobrania opłaty za transport parowozu do Krakowa.<br/> 30 marca 2008 roku, po dwudniowej podróży, dojechał on na stację Kraków Płaszów
+		<div>
+			Nawigacja:
+			<ol>
+				<li><a href="./index.html">Ćwiczenie 1</a></li>
+				<li><a href="./sub_page_2.html">Ćwiczenie 3</a></li>
+				<li><a href="./sub_page_3.html">Ćwiczenie 4</a></li>
+			</ol>
+		</div>
+		
+		<div>
+			Spis treści:
+			<ol>
+				<li><a href="#t1">Nagłówek</a></li>
+				<li><a href="#t2">Odpowiedzi na pytania</a></li>
+			</ol>
+		</div>
+		
+		<h1 id="t1">Nagłówek</h1>
+		<p><i>Pomysł na sprowadzenie lokomotywy na teren AGHnarodził się na początku roku akademickiego 2007/08.</i> <b>Jego autorem był Łukasz Wzorek, wówczas student Wydziału Metali Nieżelaznych AGH.</b> <em>Wraz z&nbsp;Maciejem Królem z&nbsp;Politechniki Krakowskiej przedstawił ideę na zebraniu międzyuczelnianego Studenckiego Koła Naukowego Przedsiębiorców „Firma”.</em> <strong>Uzyskali akceptację projektu. Najpierw zwrócili uwagę na przeznaczony na złom zabytkowy parowóz z XIX wieku w&nbsp;Krzeszowicach.</strong> Następnie, po wizycie w Tarnowskich Górach, postanowili spróbować sprowadzić do Krakowa lokomotywę typu Ty2. Dzięki współpracy z&nbsp;przedstawicielami fundacji „Era Parowozów” oraz właścicielami skansenu kolejowego w&nbsp;Pyskowicach, uzyskali listę lokomotyw przeznaczonych do złomowania. Udali się na Pomorze i&nbsp;po oględzinach wybrali Ty2-559 stojący w&nbsp;Chojnicach. Po powrocie do Krakowa zyskali akceptację dla pomysłu od rektora AGH, prof. Antoniego Tajdusia. Dzięki poparciu oraz pomocy fundacji „Era Parowozów” udało się przekonać PKP Cargo do odstąpienia od pozbycia się parowozów. Kartą przetargową okazała się luka prawna w&nbsp;postaci braku wyceny historycznej eksponatów. Po pół roku wynegocjowano warunki przekazania parowozu: lokomotywę otrzymano za darmo, do tego PKP dołożyło tender oraz wagon z lat 50. Ponadto kolej zrezygnowała z pobrania opłaty za transport parowozu do Krakowa.<br/> 30 marca 2008 roku, po dwudniowej podróży, dojechał on na stację Kraków Płaszów.
 		</p>
 		
 		<p>Przykład kodu
@@ -34,6 +51,16 @@
 		<p>Przykład wzoru matematycznego a<sup>2</sup>=x<sub>1</sub>+x<sub>2</sub></p>
 		<p>Kolejny wzór matematyczny a<sup>2</sup> &lt; b<sup>2</sup> + c<sup>2</sup></p>
 		<p>I jeszcze jeden wzór matematyczny c<sup>2</sup> + b<sup>2</sup> &gt; a<sup>2</sup></p>
+		
+		<h1 id="t2">Odpowiedzi na pytania </h1>
+		
+		<ol> 
+			<li>Znacznik &lt;em&gt; służy do oznaczenia fragmentu tekstu który chcemy zaakcentować. Przeglądarki zwykle wyświetlają go używając czcionki pochylonej. Natomiast znacznik &lt;i&gt; zawsze zmienia format tekstu na pochylony.</li>
+			<li>Znacznik &lt;strong&gt; służy do oznaczenia fragmentu tekstu który chcemy mocno zaakcentować. Przeglądarki zwykle wyświetlają go używając czcionki pogrubionej.Natomiast znacznik &lt;b&gt; zawsze zmienia format tekstu na pogróbiony</li>
+			<li>Znacznik &lt;strong&gt; służy do oznaczenia fragmentu tekstu który chcemy mocno zaakcentować. Przeglądarki zwykle wyświetlają go używając czcionki pogrubionej.Natomiast znacznik &lt;b&gt; zawsze zmienia format tekstu na pogróbiony</li>
+			<li>&lt;code&gt; stosuje się do kodów programów komputerowych, a &lt;samp&gt; do outputów programu. Nie muszą dawać identycznych wyników.</li>
+			<li>Wizualnie te formatowania niczym się od siebie nie różnią, jednak po użyciu pierwszej możliwości mamy do czynienia z dwoma paragrafami, po użyciu drugiej - z jednym, podzielonym pustą linią.</li>
+		</ol>
 		
 		<p>
 			<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
