--- a/XHTML/sub_page_2.html
+++ b/XHTML/sub_page_2.html
@@ -7,8 +7,26 @@
 		<meta http-equiv="Content-Type" content="application/xhtml+xml;charset=UTF-8" />
 	</head>
 	<body>
-		<h1>Tabela</h1>
-			<table border="1">
+		<div>
+			Nawigacja:
+			<ol>
+				<li><a href="./index.html">Ćwiczenie 1</a></li>
+				<li><a href="./sub_page_1.html">Ćwiczenie 2</a></li>
+				<li><a href="./sub_page_3.html">Ćwiczenie 4</a></li>
+			</ol>
+		</div>
+		
+		<div>
+			Spis treści:
+			<ol>
+				<li><a href="#tabela">Tabela</a></li>
+				<li><a href="#wypunktowanie">Wypunktowanie</a></li>
+				<li><a href="#definicje">Definicje</a></li>
+			</ol>
+		</div>
+		
+		<h1 id="tablea">Tabela</h1>
+			<table border="3">
 				<thead>
 					<tr>
 						<td colspan ="4">Wyniki pomiarów</td>
@@ -16,11 +34,7 @@
 				</thead>
 				<tfoot>
 					<tr>
-						<td colspan="3">Długość linki</td>
-						<td rowspan="2">0,455m</td>
-					</tr>
-					<tr>
-						<td colspan="4">Długość linki</td>
+						<td colspan="4">Koniec tabelki</td>
 					</tr>
 				</tfoot>
 				<tbody>
@@ -32,7 +46,7 @@
 					</tr>
 					<tr>
 						<td>1</td>
-						<td rowspan="4">20</td>
+						<td rowspan="3">20</td>
 						<td>26</td>
 						<td>1,3</td>
 					</tr>
@@ -46,9 +60,52 @@
 						<td>17,22</td>
 						<td>0,861</td>
 					</tr>
+					<tr>
+						<td rowspan="2" colspan="3">Długość linki</td>
+						<td>0,455m</td>
+					</tr>
+					<tr><td>+/-0,018m</td></tr>
+
 				</tbody>
 			</table>
-		<h2>Wypunktowanie</h2>
-		<h3>Definicje</h3>
+			
+		<h1 id="wypunktowanie">Wypunktowanie</h1>
+			<ol>
+				<li>Punkt 1</li>
+				<li>Punkt 2
+					<ul>
+						<li>Podpunkt 1 Punktu 2</li>
+						<li>Podpunkt 2 Punktu 2</li>
+						<li>Podpunkt 3 Punktu 2
+							<ul>
+							<li>Podpunkt 1 Podpunktu 3 Punktu 2</li>
+							<li>Podpunkt 2 Podpunktu 3 Punktu 2</li>
+							</ul>
+						</li>
+						<li>Podpunkt 4 Punktu 2</li>
+					</ul>
+				</li>
+				<li>Punkt 3</li>
+				<li>Punkt 4
+					<ol>
+						<li>Podpunkt 1 Punktu 4</li>
+						<li>Podpunkt 2 Punktu 4</li>
+					</ol>
+				</li>
+			</ol>
+			
+		<h1 id="definicje">Definicje</h1>
+		<dl>
+			<dt>komputer</dt>
+			<dd>elektroniczna maszyna cyfrowa, urządzenie elektroniczne przeznaczone do przetwarzania informacji (danych) przedstawionych w postaci cyfrowej, sterowane programem zapisanym w pamięci.</dd>
+			<dt>zegar mechaniczny</dt>
+			<dd>zegar, w którym generatorem przebiegu okresowego jest poruszające się ruchem harmonicznym wahadło (zegar mechaniczny wahadłowy) lub drgający balans (zegar mechaniczny balansowy). </dd>
+			<dt>kalkulator</dt>
+			<dd>urządzenie elektroniczne służące do prostych obliczeń, zwykle wyposażone w klawiaturę numeryczną i wyświetlacz do prezentacji wyników.</dd>
+		</dl>
+		
+		<p>
+			<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+		</p>
 	</body>
 </html>
