--- a/XHTML/index.html
+++ b/XHTML/index.html
@@ -5,20 +5,21 @@
 	<head>
 		<title>ĄĆŻŚ Borowicz</title>
 		<meta http-equiv="Content-Type" content="application/xhtml+xml;charset=UTF-8" />
+		<link rel="Stylesheet" type="text/css" href="style.css" />
+		<link rel="Stylesheet" media="print" type="text/css" href="dodruku.css" />
+		<link type="text/css" rel="alternate stylesheet" href="alternative.css" title="Alternatywnie"/>
 	</head>
 	<body>
-		<div>
-			Nawigacja:
-			<ol>
+		<div id="baner"><h1>Podstawy</h1></div>
+		<div id="strona">
+		<div id="menu">
+			<ol class="przyciski">
 				<li><a href="./sub_page_1.html">Ćwiczenie 2</a></li>
 				<li><a href="./sub_page_2.html">Ćwiczenie 3</a></li>
 				<li><a href="./sub_page_3.html">Ćwiczenie 4</a></li>
 			</ol>
-		</div>
-		
-		<div>
-			Spis treści:
-			<ol>
+			
+			<ol class="przyciski">
 				<li><a href="#t1">Rozdział I</a></li>
 				<li><a href="#s1t1">Podrozdział I rozdziału I</a></li>
 				<li><a href="#ss1s1t1">Tytuł podpodrozdziału I podrozdziału I rozdziału I</a> </li>
@@ -28,6 +29,7 @@
 			</ol>
 		</div>
 	
+		<div id="tresc">
 		<h1 id="t1">Tytuł rozdziału I</h1>
 		<p>Vestibulum dictum, justo sed pretium egestas, lectus felis vestibulum nisi, ac vulputate arcu erat vitae tortor. Suspendisse eleifend sit amet dolor suscipit lacinia. Fusce posuere risus quis tortor blandit pellentesque. Nam auctor dolor vel sapien fringilla tempus vitae vel augue. Proin ex quam, blandit eu dolor ac, auctor faucibus sem. Sed vel mi eros. Vivamus metus arcu, placerat in eros ac, efficitur venenatis massa. Integer enim arcu, maximus sit amet lectus sed, molestie semper leo. 
 		</p>
@@ -61,6 +63,13 @@
 		<p>
 			<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
 		</p>
+		
+		<p>
+			<a href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Poprawny CSS!" /></a>
+		</p>
+		
+		</div>
+		</div>
 		
 	</body>
 </html>
