--- a/XHTML/sub_page_1.html
+++ b/XHTML/sub_page_1.html
@@ -5,48 +5,39 @@
 	<head>
 		<title>ĄĆŻŚ Borowicz</title>
 		<meta http-equiv="Content-Type" content="application/xhtml+xml;charset=UTF-8" />
+		<link rel="Stylesheet" type="text/css" href="style.css" />
+		<link rel="Stylesheet" media="print" type="text/css" href="dodruku.css" />
+		<link type="text/css" rel="alternate stylesheet" href="alternative.css" title="Alternatywnie"/>
 	</head>
 	<body>
-		<div>
-			Nawigacja:
-			<ol>
+		<div id="baner"><h1>Formatowanie tekstu</h1></div>
+		<div id="strona">
+		<div id="menu">
+			<ol class="przyciski">
 				<li><a href="./index.html">Ćwiczenie 1</a></li>
 				<li><a href="./sub_page_2.html">Ćwiczenie 3</a></li>
 				<li><a href="./sub_page_3.html">Ćwiczenie 4</a></li>
 			</ol>
-		</div>
-		
-		<div>
-			Spis treści:
-			<ol>
+			<ol class="przyciski">
 				<li><a href="#t1">Nagłówek</a></li>
 				<li><a href="#t2">Odpowiedzi na pytania</a></li>
 			</ol>
 		</div>
 		
+		<div id="tresc">
 		<h1 id="t1">Nagłówek</h1>
-		<p><i>Pomysł na sprowadzenie lokomotywy na teren AGHnarodził się na początku roku akademickiego 2007/08.</i> <b>Jego autorem był Łukasz Wzorek, wówczas student Wydziału Metali Nieżelaznych AGH.</b> <em>Wraz z&nbsp;Maciejem Królem z&nbsp;Politechniki Krakowskiej przedstawił ideę na zebraniu międzyuczelnianego Studenckiego Koła Naukowego Przedsiębiorców „Firma”.</em> <strong>Uzyskali akceptację projektu. Najpierw zwrócili uwagę na przeznaczony na złom zabytkowy parowóz z XIX wieku w&nbsp;Krzeszowicach.</strong> Następnie, po wizycie w Tarnowskich Górach, postanowili spróbować sprowadzić do Krakowa lokomotywę typu Ty2. Dzięki współpracy z&nbsp;przedstawicielami fundacji „Era Parowozów” oraz właścicielami skansenu kolejowego w&nbsp;Pyskowicach, uzyskali listę lokomotyw przeznaczonych do złomowania. Udali się na Pomorze i&nbsp;po oględzinach wybrali Ty2-559 stojący w&nbsp;Chojnicach. Po powrocie do Krakowa zyskali akceptację dla pomysłu od rektora AGH, prof. Antoniego Tajdusia. Dzięki poparciu oraz pomocy fundacji „Era Parowozów” udało się przekonać PKP Cargo do odstąpienia od pozbycia się parowozów. Kartą przetargową okazała się luka prawna w&nbsp;postaci braku wyceny historycznej eksponatów. Po pół roku wynegocjowano warunki przekazania parowozu: lokomotywę otrzymano za darmo, do tego PKP dołożyło tender oraz wagon z lat 50. Ponadto kolej zrezygnowała z pobrania opłaty za transport parowozu do Krakowa.<br/> 30 marca 2008 roku, po dwudniowej podróży, dojechał on na stację Kraków Płaszów.
+		<p><i>Pomysł na sprowadzenie lokomotywy na teren AGHnarodził się na początku roku akademickiego 2007/08.</i> <b>Jego autorem był Łukasz Wzorek, wówczas student Wydziału Metali Nieżelaznych AGH.</b> <em>Wraz z&nbsp;Maciejem Królem z&nbsp;Politechniki Krakowskiej przedstawił ideę na zebraniu międzyuczelnianego Studenckiego Koła Naukowego Przedsiębiorców „Firma”.</em> <strong>Uzyskali akceptację projektu. Najpierw zwrócili uwagę na przeznaczony na złom zabytkowy parowóz z XIX wieku w&nbsp;Krzeszowicach.</strong> <code>public clsass</code> Następnie, po wizycie w Tarnowskich Górach <samp>String c = "123";</samp>, postanowili spróbować sprowadzić do Krakowa lokomotywę typu Ty2. Dzięki współpracy z&nbsp;przedstawicielami fundacji „Era Parowozów” oraz właścicielami skansenu kolejowego w&nbsp;Pyskowicach, uzyskali listę lokomotyw przeznaczonych do złomowania. Udali się na Pomorze i&nbsp;po oględzinach wybrali Ty2-559 stojący w&nbsp;Chojnicach. Po powrocie do Krakowa zyskali akceptację dla pomysłu od rektora AGH, prof. Antoniego Tajdusia. Dzięki poparciu oraz pomocy fundacji „Era Parowozów” udało się przekonać PKP Cargo do odstąpienia od pozbycia się parowozów. Kartą przetargową okazała się luka prawna w&nbsp;postaci braku wyceny historycznej eksponatów. Po pół roku wynegocjowano warunki przekazania parowozu: lokomotywę otrzymano za darmo, do tego PKP dołożyło tender oraz wagon z lat 50. Ponadto kolej zrezygnowała z pobrania opłaty za transport parowozu do Krakowa.<br/> 30 marca 2008 roku, po dwudniowej podróży, dojechał on na stację Kraków Płaszów.
 		</p>
 		
-		<p>Przykład kodu
-			<code>
+		<h1>Przykład kodu</h1>
+			<pre>
 				public class HelloWorld {
 
 				public static void main(String[] args) {
 					System.out.println("Hello, World");
 				}
-			</code>
-		</p>
+			</pre>
 		
-		<p>Kolejny przykładowy kod
-			<samp>
-				int main (void)
-				{
-					puts ("Hello World!");
-				   return 0;
-				}
-			</samp>
-		</p>
 		
 		<p>Przykład wzoru matematycznego a<sup>2</sup>=x<sub>1</sub>+x<sub>2</sub></p>
 		<p>Kolejny wzór matematyczny a<sup>2</sup> &lt; b<sup>2</sup> + c<sup>2</sup></p>
@@ -65,6 +56,13 @@
 		<p>
 			<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
 		</p>
+		
+		<p>
+			<a href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Poprawny CSS!" /></a>
+		</p>
+		
+		</div>
+		</div>
 		
 	</body>
 </html>
