--- a/XHTML/sub_page_2.html
+++ b/XHTML/sub_page_2.html
@@ -5,31 +5,36 @@
 	<head>
 		<title>ĄĆŻŚ Borowicz</title>
 		<meta http-equiv="Content-Type" content="application/xhtml+xml;charset=UTF-8" />
+		<link rel="Stylesheet" type="text/css" href="style.css" />
+		<link rel="Stylesheet" media="print" type="text/css" href="dodruku.css" />
+		<link type="text/css" rel="alternate stylesheet" href="alternative.css" title="Alternatywnie"/>
 	</head>
 	<body>
-		<div>
-			Nawigacja:
-			<ol>
+		<div id="baner"><h1>Tabele, Listy, definicje</h1></div>
+		<div id="strona">
+		<div id="menu">
+			<ol class="przyciski">
 				<li><a href="./index.html">Ćwiczenie 1</a></li>
 				<li><a href="./sub_page_1.html">Ćwiczenie 2</a></li>
 				<li><a href="./sub_page_3.html">Ćwiczenie 4</a></li>
 			</ol>
-		</div>
-		
-		<div>
-			Spis treści:
-			<ol>
+
+			<ol class="przyciski">
 				<li><a href="#tabela">Tabela</a></li>
 				<li><a href="#wypunktowanie">Wypunktowanie</a></li>
 				<li><a href="#definicje">Definicje</a></li>
 			</ol>
 		</div>
 		
+		<div id="tresc">
 		<h1 id="tablea">Tabela</h1>
 			<table border="3">
 				<thead>
 					<tr>
-						<td colspan ="4">Wyniki pomiarów</td>
+						<td>nr</td>
+						<td>liczba okresow</td>
+						<td>czas[s]</td>
+						<td>okres[s]</td>
 					</tr>
 				</thead>
 				<tfoot>
@@ -38,12 +43,6 @@
 					</tr>
 				</tfoot>
 				<tbody>
-					<tr>
-						<td>nr</td>
-						<td>liczba okresow</td>
-						<td>czas[s]</td>
-						<td>okres[s]</td>
-					</tr>
 					<tr>
 						<td>1</td>
 						<td rowspan="3">20</td>
@@ -61,7 +60,7 @@
 						<td>0,861</td>
 					</tr>
 					<tr>
-						<td rowspan="2" colspan="3">Długość linki</td>
+						<td rowspan="2" colspan="3" class="qwertz">Długość linki</td>
 						<td>0,455m</td>
 					</tr>
 					<tr><td>+/-0,018m</td></tr>
@@ -73,17 +72,17 @@
 			<ol>
 				<li>Punkt 1</li>
 				<li>Punkt 2
-					<ul>
+					<ol>
 						<li>Podpunkt 1 Punktu 2</li>
 						<li>Podpunkt 2 Punktu 2</li>
 						<li>Podpunkt 3 Punktu 2
-							<ul>
+							<ol>
 							<li>Podpunkt 1 Podpunktu 3 Punktu 2</li>
 							<li>Podpunkt 2 Podpunktu 3 Punktu 2</li>
-							</ul>
+							</ol>
 						</li>
 						<li>Podpunkt 4 Punktu 2</li>
-					</ul>
+					</ol>
 				</li>
 				<li>Punkt 3</li>
 				<li>Punkt 4
@@ -107,5 +106,11 @@
 		<p>
 			<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
 		</p>
+		
+		<p>
+			<a href="http://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Poprawny CSS!" /></a>
+		</p>
+		</div>
+		</div>
 	</body>
 </html>
