--- a/XHTML/sub_page_2.html
+++ b/XHTML/sub_page_2.html
@@ -47,23 +47,23 @@
 						<td>1</td>
 						<td rowspan="3">20</td>
 						<td>26</td>
-						<td>1,3</td>
+						<td class="qwertz">1,3</td>
 					</tr>
 					<tr>
 						<td>2</td>
 						<td>22,53</td>
-						<td>1,12</td>
+						<td class="qwertz">1,12</td>
 					</tr>
 					<tr>
 						<td>3</td>
 						<td>17,22</td>
-						<td>0,861</td>
+						<td class="qwertz">0,861</td>
 					</tr>
 					<tr>
-						<td rowspan="2" colspan="3" class="qwertz">Długość linki</td>
-						<td>0,455m</td>
+						<td rowspan="2" colspan="3">Długość linki</td>
+						<td class="qwertz">0,455m</td>
 					</tr>
-					<tr><td>+/-0,018m</td></tr>
+					<tr><td class="qwertz">+/-0,018m</td></tr>
 
 				</tbody>
 			</table>
